MonoBehav Timer, yay!
New Folders
-----------
- Scripts/Utilities: intended for general purpose scripts, currently contains the monobehav version of the timer (Timer2.cs)

New Scripts
-----------
- Scripts/Utilities/Timer2.cs: MonoBehav Timer, can be used via the new TimerObject

--- a/Crabasite/Assets/Scripts/Enemies/Enemies.asmdef
+++ b/Crabasite/Assets/Scripts/Enemies/Enemies.asmdef
@@ -2,7 +2,8 @@
     "name": "Enemies",
     "rootNamespace": "",
     "references": [
-        "GUID:06423854016016747a5577a3b6a58e0a"
+        "GUID:06423854016016747a5577a3b6a58e0a",
+        "GUID:cd8710cdfd91074428d6412a0e873205"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
