[IMPORTANT] refactored stuff
Notes
-----

I changed the puffer fish behaviour class to get its attribute values from a scriptable object rather than setting them in the class directly. This makes adjusting them much easier :) I furthermore decided to also put the damage/combat related functions (in case of the puffer fish OnCollisionEnter2D(collision)) in the behaviour file

New Folders
-----------

- Resources/Scriptable Objects/EnemyData: folder for enemy type 'database files'

New Files
---------

- Scripts/Enemies/PufferFishData.cs: file for creating the default puffer fish database (scriptable object)

Changed Files
-------------

- PufferFishBehaviour.cs
	- refactored to use the new database system
	- removed some commented out code
	- added a cooldown timer for biting

- PlayerHealth.cs
	- new isAlive(): for checking if the player is alive (aka health > 0)

- Movement.cs
	- movement is now disabled if the player is dead ;)

--- a/Crabasite/Assets/Scripts/Gameplay/Core/Core.asmdef
+++ b/Crabasite/Assets/Scripts/Gameplay/Core/Core.asmdef
@@ -2,7 +2,8 @@
     "name": "Core",
     "rootNamespace": "",
     "references": [
-        "GUID:d74dccdce14465e45a79a6e7a628b35c"
+        "GUID:d74dccdce14465e45a79a6e7a628b35c",
+        "GUID:7c5bcb46a07408749b6ddc2f804b50b3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
