--- a/Crabasite/Assets/Scripts/Enemies/Enemies.asmdef
+++ b/Crabasite/Assets/Scripts/Enemies/Enemies.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:06423854016016747a5577a3b6a58e0a",
-        "GUID:cd8710cdfd91074428d6412a0e873205"
+        "GUID:cd8710cdfd91074428d6412a0e873205",
+        "GUID:efa45043feb7e4147a305b73b5cea642"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
