--- a/Crabasite/Assets/Scripts/Inventory/Inventory.asmdef
+++ b/Crabasite/Assets/Scripts/Inventory/Inventory.asmdef
@@ -2,7 +2,8 @@
     "name": "Inventory",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:7c5bcb46a07408749b6ddc2f804b50b3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
