--- a/Crabasite/Assets/Scripts/Progression Tracker/ProgressionTracker.asmdef
+++ b/Crabasite/Assets/Scripts/Progression Tracker/ProgressionTracker.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "ProgressionTracker"
+    "name": "ProgressionTracker",
+    "rootNamespace": "",
+    "references": [
+        "GUID:cd8710cdfd91074428d6412a0e873205"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
