Fixing inventory logic for save and load

--- a/Crabasite/Assets/Scripts/Progression Tracker/ProgressionTracker.asmdef
+++ b/Crabasite/Assets/Scripts/Progression Tracker/ProgressionTracker.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "",
     "references": [
         "GUID:cd8710cdfd91074428d6412a0e873205",
+        "GUID:1fcf3d935992442e39008ae979fb3473",
         "GUID:3bc27c1fc32a9b249a565b02cd514511"
     ],
     "includePlatforms": [],
