--- a/Crabasite/Assets/Scripts/DataPersistence/DataPersistence.asmdef
+++ b/Crabasite/Assets/Scripts/DataPersistence/DataPersistence.asmdef
@@ -1,11 +1,8 @@
 {
-    "name": "Enemies",
+    "name": "DataPersistence",
     "rootNamespace": "",
     "references": [
-        "GUID:06423854016016747a5577a3b6a58e0a",
-        "GUID:cd8710cdfd91074428d6412a0e873205",
-        "GUID:efa45043feb7e4147a305b73b5cea642",
-        "GUID:0081ddeb97a3442839480d7dffa8d9e4"
+        "GUID:1fcf3d935992442e39008ae979fb3473"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
