--- a/Crabasite/Assets/Scripts/Progression Tracker/ProgressionTracker.asmdef
+++ b/Crabasite/Assets/Scripts/Progression Tracker/ProgressionTracker.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:cd8710cdfd91074428d6412a0e873205",
         "GUID:1fcf3d935992442e39008ae979fb3473",
-        "GUID:3bc27c1fc32a9b249a565b02cd514511"
+        "GUID:3bc27c1fc32a9b249a565b02cd514511",
+        "GUID:0081ddeb97a3442839480d7dffa8d9e4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
