--- a/Crabasite/Assets/Scripts/Gameplay/Core/Core.asmdef
+++ b/Crabasite/Assets/Scripts/Gameplay/Core/Core.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:d74dccdce14465e45a79a6e7a628b35c",
         "GUID:7c5bcb46a07408749b6ddc2f804b50b3",
-        "GUID:cd8710cdfd91074428d6412a0e873205"
+        "GUID:cd8710cdfd91074428d6412a0e873205",
+        "GUID:3bc27c1fc32a9b249a565b02cd514511"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
