got enemy spawning to work properly
- prog scripts: moved all init stuff into Start()
- DataPersistanceManager: moved all init stuff into Awake()
- added offset to enemy spawner trigger

--- a/Crabasite/Assets/Scripts/ProgressionSystem/ProgressionTracker.asmdef
+++ b/Crabasite/Assets/Scripts/ProgressionSystem/ProgressionTracker.asmdef
@@ -6,7 +6,8 @@
         "GUID:1fcf3d935992442e39008ae979fb3473",
         "GUID:3bc27c1fc32a9b249a565b02cd514511",
         "GUID:0081ddeb97a3442839480d7dffa8d9e4",
-        "GUID:7c5bcb46a07408749b6ddc2f804b50b3"
+        "GUID:7c5bcb46a07408749b6ddc2f804b50b3",
+        "GUID:159c99fea7ac4bf4d9a07bba0162bcaf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
