--- a/Crabasite/Assets/Scripts/Misc/Misc.asmdef
+++ b/Crabasite/Assets/Scripts/Misc/Misc.asmdef
@@ -1,11 +1,7 @@
 {
-    "name": "Inventory",
+    "name": "Misc",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:1fcf3d935992442e39008ae979fb3473",
-        "GUID:0081ddeb97a3442839480d7dffa8d9e4",
-        "GUID:7c5bcb46a07408749b6ddc2f804b50b3",
         "GUID:cd8710cdfd91074428d6412a0e873205"
     ],
     "includePlatforms": [],
