entrance for spaceship
- updated scene reference string for the SpaceshipEntrance Interaction Points

--- a/Crabasite/Assets/Scripts/InteractionSystem/InteractionSystem.asmdef
+++ b/Crabasite/Assets/Scripts/InteractionSystem/InteractionSystem.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Misc",
+    "name": "InteractionSystem",
     "rootNamespace": "",
     "references": [
         "GUID:cd8710cdfd91074428d6412a0e873205"
