--- a/Crabasite/Assets/Scripts/Misc/Misc.asmdef
+++ b/Crabasite/Assets/Scripts/Misc/Misc.asmdef
@@ -2,7 +2,8 @@
     "name": "Misc",
     "rootNamespace": "",
     "references": [
-        "GUID:cd8710cdfd91074428d6412a0e873205"
+        "GUID:cd8710cdfd91074428d6412a0e873205",
+        "GUID:0081ddeb97a3442839480d7dffa8d9e4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
