--- a/Crabasite/Assets/Scripts/Items/Items.asmdef
+++ b/Crabasite/Assets/Scripts/Items/Items.asmdef
@@ -1,14 +1,10 @@
 {
-    "name": "ProgressionTracker",
+    "name": "Items",
     "rootNamespace": "",
     "references": [
-        "GUID:cd8710cdfd91074428d6412a0e873205",
         "GUID:1fcf3d935992442e39008ae979fb3473",
-        "GUID:3bc27c1fc32a9b249a565b02cd514511",
-        "GUID:0081ddeb97a3442839480d7dffa8d9e4",
-        "GUID:7c5bcb46a07408749b6ddc2f804b50b3",
-        "GUID:159c99fea7ac4bf4d9a07bba0162bcaf",
-        "GUID:db1d1ee2cdafa5540a971b65e5d37851"
+        "GUID:cd8710cdfd91074428d6412a0e873205",
+        "GUID:3bc27c1fc32a9b249a565b02cd514511"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
