--- a/Crabasite/Assets/Scripts/ProgressionSystem/ProgressionTracker.asmdef
+++ b/Crabasite/Assets/Scripts/ProgressionSystem/ProgressionTracker.asmdef
@@ -8,7 +8,8 @@
         "GUID:0081ddeb97a3442839480d7dffa8d9e4",
         "GUID:159c99fea7ac4bf4d9a07bba0162bcaf",
         "GUID:e8e7e62f1dddeff41ac3538a6c0af4cb",
-        "GUID:db1d1ee2cdafa5540a971b65e5d37851"
+        "GUID:db1d1ee2cdafa5540a971b65e5d37851",
+        "GUID:26711c4b28a6cab41b6e0cafc4779c95"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
