--- a/Crabasite/Assets/Scripts/QuestSystem/QuestSystem.asmdef
+++ b/Crabasite/Assets/Scripts/QuestSystem/QuestSystem.asmdef
@@ -1,3 +1,17 @@
 {
-	"name": "QuestSystem"
+    "name": "QuestSystem",
+    "rootNamespace": "",
+    "references": [
+        "GUID:9b655524a946b6348ba982917e14b53d",
+        "GUID:0081ddeb97a3442839480d7dffa8d9e4"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
