--- a/Crabasite/Assets/Scripts/ProgressionSystem/ProgressionSystem.asmdef
+++ b/Crabasite/Assets/Scripts/ProgressionSystem/ProgressionSystem.asmdef
@@ -9,7 +9,8 @@
         "GUID:159c99fea7ac4bf4d9a07bba0162bcaf",
         "GUID:e8e7e62f1dddeff41ac3538a6c0af4cb",
         "GUID:db1d1ee2cdafa5540a971b65e5d37851",
-        "GUID:26711c4b28a6cab41b6e0cafc4779c95"
+        "GUID:26711c4b28a6cab41b6e0cafc4779c95",
+        "GUID:9b655524a946b6348ba982917e14b53d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
