--- a/Crabasite/Assets/Scripts/Misc/Misc.asmdef
+++ b/Crabasite/Assets/Scripts/Misc/Misc.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:cd8710cdfd91074428d6412a0e873205",
-        "GUID:0081ddeb97a3442839480d7dffa8d9e4"
+        "GUID:0081ddeb97a3442839480d7dffa8d9e4",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
