--- a/Crabasite/Assets/Scripts/QuestSystem/QuestSystem.asmdef
+++ b/Crabasite/Assets/Scripts/QuestSystem/QuestSystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:9b655524a946b6348ba982917e14b53d",
-        "GUID:0081ddeb97a3442839480d7dffa8d9e4"
+        "GUID:0081ddeb97a3442839480d7dffa8d9e4",
+        "GUID:3bc27c1fc32a9b249a565b02cd514511"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
