--- a/Crabasite/Assets/Scripts/QuestSystem/QuestSystem.asmdef
+++ b/Crabasite/Assets/Scripts/QuestSystem/QuestSystem.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:9b655524a946b6348ba982917e14b53d",
         "GUID:0081ddeb97a3442839480d7dffa8d9e4",
-        "GUID:3bc27c1fc32a9b249a565b02cd514511"
+        "GUID:3bc27c1fc32a9b249a565b02cd514511",
+        "GUID:3c9462bc1497cff42acca51c6af056c7",
+        "GUID:e8e7e62f1dddeff41ac3538a6c0af4cb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
