--- a/Crabasite/Assets/Scripts/Utilities/Utilities.asmdef
+++ b/Crabasite/Assets/Scripts/Utilities/Utilities.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "Utilities"
+    "name": "Utilities",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
