--- a/Crabasite/Assets/Scripts/DataPersistence/DataPersistence.asmdef
+++ b/Crabasite/Assets/Scripts/DataPersistence/DataPersistence.asmdef
@@ -2,7 +2,8 @@
     "name": "DataPersistence",
     "rootNamespace": "",
     "references": [
-        "GUID:1fcf3d935992442e39008ae979fb3473"
+        "GUID:1fcf3d935992442e39008ae979fb3473",
+        "GUID:cd8710cdfd91074428d6412a0e873205"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
