Created Assembly Definition for Sounds

--- a/Crabasite/Assets/Scripts/Gameplay/Core/Core.asmdef
+++ b/Crabasite/Assets/Scripts/Gameplay/Core/Core.asmdef
@@ -6,7 +6,8 @@
         "GUID:7c5bcb46a07408749b6ddc2f804b50b3",
         "GUID:cd8710cdfd91074428d6412a0e873205",
         "GUID:3bc27c1fc32a9b249a565b02cd514511",
-        "GUID:721eeed5269244462a630e8d393ba50d"
+        "GUID:721eeed5269244462a630e8d393ba50d",
+        "GUID:793904402e67fe7458b50a48c8f88885"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
