--- a/Crabasite/Assets/Scripts/InteractionSystem/InteractionSystem.asmdef
+++ b/Crabasite/Assets/Scripts/InteractionSystem/InteractionSystem.asmdef
@@ -8,7 +8,8 @@
         "GUID:e8e7e62f1dddeff41ac3538a6c0af4cb",
         "GUID:3c9462bc1497cff42acca51c6af056c7",
         "GUID:fcef9e0ae60499642a8495f5bde317e9",
-        "GUID:26711c4b28a6cab41b6e0cafc4779c95"
+        "GUID:26711c4b28a6cab41b6e0cafc4779c95",
+        "GUID:793904402e67fe7458b50a48c8f88885"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
