WIP angler fish boss
missing:
- crush drop not tested
- bad healthbars

--- a/Crabasite/Assets/Scripts/ProgressionSystem/ProgressionSystem.asmdef
+++ b/Crabasite/Assets/Scripts/ProgressionSystem/ProgressionSystem.asmdef
@@ -10,7 +10,8 @@
         "GUID:26711c4b28a6cab41b6e0cafc4779c95",
         "GUID:3bc27c1fc32a9b249a565b02cd514511",
         "GUID:3c9462bc1497cff42acca51c6af056c7",
-        "GUID:b570f6865c5b94646ba4cf2b5a11e78c"
+        "GUID:b570f6865c5b94646ba4cf2b5a11e78c",
+        "GUID:7c5bcb46a07408749b6ddc2f804b50b3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
