--- a/Crabasite/Assets/Scripts/Enemies/Enemies.asmdef
+++ b/Crabasite/Assets/Scripts/Enemies/Enemies.asmdef
@@ -6,7 +6,8 @@
         "GUID:cd8710cdfd91074428d6412a0e873205",
         "GUID:efa45043feb7e4147a305b73b5cea642",
         "GUID:0081ddeb97a3442839480d7dffa8d9e4",
-        "GUID:721eeed5269244462a630e8d393ba50d"
+        "GUID:721eeed5269244462a630e8d393ba50d",
+        "GUID:793904402e67fe7458b50a48c8f88885"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
