implemented the emergency door with all required subsystems

--- a/Crabasite/Assets/Scripts/InteractionSystem/InteractionSystem.asmdef
+++ b/Crabasite/Assets/Scripts/InteractionSystem/InteractionSystem.asmdef
@@ -9,7 +9,8 @@
         "GUID:3c9462bc1497cff42acca51c6af056c7",
         "GUID:fcef9e0ae60499642a8495f5bde317e9",
         "GUID:26711c4b28a6cab41b6e0cafc4779c95",
-        "GUID:793904402e67fe7458b50a48c8f88885"
+        "GUID:793904402e67fe7458b50a48c8f88885",
+        "GUID:a7d9f4894f829c34e8caab87539b2035"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
