intertwined emergency door with the corresponding quest
- also added protagonist comments for that quest

--- a/Crabasite/Assets/Scripts/QuestSystem/QuestSystem.asmdef
+++ b/Crabasite/Assets/Scripts/QuestSystem/QuestSystem.asmdef
@@ -7,7 +7,8 @@
         "GUID:3bc27c1fc32a9b249a565b02cd514511",
         "GUID:3c9462bc1497cff42acca51c6af056c7",
         "GUID:e8e7e62f1dddeff41ac3538a6c0af4cb",
-        "GUID:cd8710cdfd91074428d6412a0e873205"
+        "GUID:cd8710cdfd91074428d6412a0e873205",
+        "GUID:a7d9f4894f829c34e8caab87539b2035"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
