--- a/Crabasite/Assets/Scripts/CommentarySystem/CommentarySystem.asmdef
+++ b/Crabasite/Assets/Scripts/CommentarySystem/CommentarySystem.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "CommentarySystem",
     "rootNamespace": "",
-    "references": [
-        "GUID:bf58f315b7432404c92ac861a11017e6"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
