--- a/Crabasite/Assets/Scripts/Utilities/Utilities.asmdef
+++ b/Crabasite/Assets/Scripts/Utilities/Utilities.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Utilities",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:3c9462bc1497cff42acca51c6af056c7"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
