--- a/Crabasite/Assets/Scripts/CommentarySystem/CommentarySystem.asmdef
+++ b/Crabasite/Assets/Scripts/CommentarySystem/CommentarySystem.asmdef
@@ -2,7 +2,8 @@
     "name": "CommentarySystem",
     "rootNamespace": "",
     "references": [
-        "GUID:bf58f315b7432404c92ac861a11017e6"
+        "GUID:bf58f315b7432404c92ac861a11017e6",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
