--- a/Crabasite/Assets/Scripts/Inventory/InventoryMain/Inventory.asmdef
+++ b/Crabasite/Assets/Scripts/Inventory/InventoryMain/Inventory.asmdef
@@ -6,7 +6,8 @@
         "GUID:1fcf3d935992442e39008ae979fb3473",
         "GUID:0081ddeb97a3442839480d7dffa8d9e4",
         "GUID:7c5bcb46a07408749b6ddc2f804b50b3",
-        "GUID:cd8710cdfd91074428d6412a0e873205"
+        "GUID:cd8710cdfd91074428d6412a0e873205",
+        "GUID:f10496e9d78b943308af5e7e9e4543c8"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
