--- a/Crabasite/Assets/Scripts/CommentarySystem/CommentarySystem.asmdef
+++ b/Crabasite/Assets/Scripts/CommentarySystem/CommentarySystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:bf58f315b7432404c92ac861a11017e6",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:793904402e67fe7458b50a48c8f88885"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
