fixed constant lasers not emitting constantly

--- a/Crabasite/Assets/Scripts/Inventory/InventoryMain/Inventory.asmdef
+++ b/Crabasite/Assets/Scripts/Inventory/InventoryMain/Inventory.asmdef
@@ -7,7 +7,8 @@
         "GUID:0081ddeb97a3442839480d7dffa8d9e4",
         "GUID:7c5bcb46a07408749b6ddc2f804b50b3",
         "GUID:cd8710cdfd91074428d6412a0e873205",
-        "GUID:f10496e9d78b943308af5e7e9e4543c8"
+        "GUID:f10496e9d78b943308af5e7e9e4543c8",
+        "GUID:3c9462bc1497cff42acca51c6af056c7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
