added MessageReceivedSound to mail spawning

--- a/Crabasite/Assets/Scripts/SpawnSystem/SpawnSystem.asmdef
+++ b/Crabasite/Assets/Scripts/SpawnSystem/SpawnSystem.asmdef
@@ -7,7 +7,8 @@
         "GUID:1fcf3d935992442e39008ae979fb3473",
         "GUID:cd8710cdfd91074428d6412a0e873205",
         "GUID:0081ddeb97a3442839480d7dffa8d9e4",
-        "GUID:06423854016016747a5577a3b6a58e0a"
+        "GUID:06423854016016747a5577a3b6a58e0a",
+        "GUID:793904402e67fe7458b50a48c8f88885"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
