--- a/Crabasite/Assets/Scripts/Utilities/Utilities.asmdef
+++ b/Crabasite/Assets/Scripts/Utilities/Utilities.asmdef
@@ -2,7 +2,8 @@
     "name": "Utilities",
     "rootNamespace": "",
     "references": [
-        "GUID:3c9462bc1497cff42acca51c6af056c7"
+        "GUID:3c9462bc1497cff42acca51c6af056c7",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
