Black Hole Mechanics + death screen stops comments

--- a/Crabasite/Assets/Scripts/Enemies/Enemies.asmdef
+++ b/Crabasite/Assets/Scripts/Enemies/Enemies.asmdef
@@ -7,7 +7,8 @@
         "GUID:efa45043feb7e4147a305b73b5cea642",
         "GUID:0081ddeb97a3442839480d7dffa8d9e4",
         "GUID:721eeed5269244462a630e8d393ba50d",
-        "GUID:793904402e67fe7458b50a48c8f88885"
+        "GUID:793904402e67fe7458b50a48c8f88885",
+        "GUID:3c9462bc1497cff42acca51c6af056c7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
