--- a/Crabasite/Assets/Scripts/BlackHole/Black Hole.asmdef
+++ b/Crabasite/Assets/Scripts/BlackHole/Black Hole.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "Utilities",
+    "name": "BlackHole",
     "rootNamespace": "",
     "references": [
-        "GUID:3c9462bc1497cff42acca51c6af056c7",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:5f99097994527cc4395e9413a7d89ba5"
+        "GUID:3c9462bc1497cff42acca51c6af056c7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
